// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";

package ccsds_mc.protobuf;

message StatisticValueStruct {
extensions 7 to 107;

  optional ccsds_mal.protobuf.TIME startTime = 1;
  optional ccsds_mal.protobuf.TIME endTime = 2;
  optional ccsds_mal.protobuf.TIME valueTime = 3;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 4;
  optional ccsds_mal.protobuf.UINTEGER sampleCount = 5;
  optional ccsds_mal.protobuf.TIME timestamp = 6;
}
